--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "express": "^4.16.3",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
+    "react-icons": "^2.2.7",
+    "react-images": "^0.5.17",
     "react-scripts": "1.1.1"
   },
   "scripts": {
